--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             ></textarea>
           </div>
           <div class="modal-color-cont">
-            <div class="Blue modal-color">To Do</div>
+            <div class="Blue modal-color active">To Do</div>
             <div class="Lightpink modal-color">Pending</div>
             <div class="Lightgreen modal-color">In Progress</div>
             <div class="Lightblue modal-color">Completed</div>
@@ -71,64 +71,20 @@
 
         <!-- Ticket -->
         <div class="ticket-main-cont">
-          <div class="ticket-cont">
+          <!-- <div class="ticket-cont">
             <div class="ticket-id"></div>
             <div class="ticket-heading"></div>
             <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
-          <div class="ticket-cont">
-            <div class="ticket-id"></div>
-            <div class="ticket-heading"></div>
-            <div class="ticket-task"></div>
-          </div>
+          </div> -->
         </div>
       </main>
     </div>
   </body>
   <script src="script.js"></script>
+  <!-- <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/shortid/2.2.16/index.js"
+    integrity="sha512-e/wLqpGqdP/7WDzpXEOu7VaJ3WfcKMiWkgdeExE+Wm1Huwft5n9/MGQYYswDhJSlQS5j+VPJmg/rF62KinJkPw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script> -->
 </html>
