--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 
       <!-- <Main-Content> -->
       <main class="content">
+        <input type="checkbox" id="check" />
+        <label for="check" class="checkbtn">
+          <i class="fa-solid fa-bars"></i>
+        </label>
+
         <!-- heading -->
         <div class="task-heading-cont">All Tasks</div>
 
