--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <label for="check" class="checkbtn">
           <i class="fa-solid fa-bars"></i>
         </label>
+        <div class="dlt-btn active-dlt-btn">
+          <i class="fa-solid fa-trash"></i>
+          <!-- <span>Delet mode</span> -->
+        </div>
 
         <!-- heading -->
         <div class="task-heading-cont">All Tasks</div>
