--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <label for="check" class="checkbtn">
           <i class="fa-solid fa-bars"></i>
         </label>
-        <div class="dlt-btn active-dlt-btn">
+        <div class="active-dlt-btn">
           <i class="fa-solid fa-trash"></i>
           <!-- <span>Delet mode</span> -->
         </div>
