--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <main class="content">
         <input type="checkbox" id="check" />
         <label for="check" class="checkbtn">
-          <i class="fa-solid fa-bars"></i>
+          <i class="bars fa-solid fa-bars"></i>
         </label>
         <div class="active-dlt-btn">
           <i class="fa-solid fa-trash"></i>
-          <!-- <span>Delet mode</span> -->
+          <span>Delet mode</span>
         </div>
 
         <!-- heading -->
@@ -84,6 +84,9 @@
             <div class="ticket-id"></div>
             <div class="ticket-heading"></div>
             <div class="ticket-task"></div>
+            <div class="ticket-lock">
+              <i class="fa-solid fa-lock"></i>
+            </div>
           </div> -->
         </div>
       </main>
