--- a/index.html
+++ b/index.html
@@ -93,10 +93,5 @@
     </div>
   </body>
   <script src="script.js"></script>
-  <!-- <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/shortid/2.2.16/index.js"
-    integrity="sha512-e/wLqpGqdP/7WDzpXEOu7VaJ3WfcKMiWkgdeExE+Wm1Huwft5n9/MGQYYswDhJSlQS5j+VPJmg/rF62KinJkPw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  ></script> -->
+  <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
 </html>
